--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -711,7 +711,7 @@ msgid "Timezone"
 msgstr "Tidszone"
 
 #: pretix/base/models/auth.py:91
-msgid "Two-factor authentification is required to log in"
+msgid "Two-factor authentication is required to log in"
 msgstr "To-faktor bekræftelse er påkrævet for at logge ind"
 
 #: pretix/base/models/auth.py:95
@@ -2749,7 +2749,7 @@ msgstr ""
 
 #: pretix/base/services/orders.py:708
 msgid ""
-"This is an addon product, please select the base position it should be added "
+"This is an add-on product, please select the base position it should be added "
 "to."
 msgstr "Dette er et tillægsprodukt. Vælg linjen det skal føjes til."
 
@@ -3670,8 +3670,8 @@ msgstr "Seneste betalingsdato skal være på en hverdag"
 
 #: pretix/control/forms/event.py:433
 msgid ""
-"If this is activated and the payment term of any order ends on a saturday or "
-"sunday, it will be moved to the next monday instead. This is required in "
+"If this is activated and the payment term of any order ends on a Saturday or "
+"Sunday, it will be moved to the next Monday instead. This is required in "
 "some countries by civil law. This will not effect the last date of payments "
 "configured above."
 msgstr ""
@@ -4606,7 +4606,7 @@ msgstr ""
 #, python-format
 msgid ""
 "The variation \"%s\" cannot be deleted because it has already been ordered "
-"by a user or currently is in a users's cart. Please set the variation as "
+"by a user or currently is in a user's cart. Please set the variation as "
 "\"inactive\" instead."
 msgstr ""
 
@@ -5426,7 +5426,7 @@ msgstr "Velkommen tilbage!"
 
 #: pretix/control/templates/pretixcontrol/auth/login_2fa.html:11
 msgid ""
-"You configured your account to require authentification with a second "
+"You configured your account to require authentication with a second "
 "medium, e.g. your phone. Please enter your verification code here:"
 msgstr ""
 
@@ -7089,7 +7089,7 @@ msgid ""
 "define, how many instances of your product pretix will sell. This way, you "
 "can configure whether your event can take an unlimited number of attendees "
 "or the number of attendees is limited. You can assign a product to multiple "
-"quotas to fulfil more complex requirements, e.g. if you want to limit the "
+"quotas to fulfill more complex requirements, e.g. if you want to limit the "
 "total number of tickets sold and the number of a specific ticket type at the "
 "same time."
 msgstr ""
@@ -7131,7 +7131,7 @@ msgid ""
 msgstr ""
 
 #: pretix/control/templates/pretixcontrol/multi_languages_widget.html:14
-msgid "Inofficial translation"
+msgid "Unofficial translation"
 msgstr ""
 
 #: pretix/control/templates/pretixcontrol/order/cancel.html:4
@@ -7683,7 +7683,7 @@ msgstr "Slet gruppe:"
 
 #: pretix/control/templates/pretixcontrol/organizers/team_delete.html:7
 msgid ""
-"You cannot delete the team because there would be noone left who could "
+"You cannot delete the team because there would be no one left who could "
 "change team permissions afterwards."
 msgstr ""
 
@@ -8866,7 +8866,7 @@ msgstr ""
 
 #: pretix/control/views/item.py:976
 msgid ""
-"You cannot add addons to a product that is only available as an add-on "
+"You cannot add add-ons to a product that is only available as an add-on "
 "itself."
 msgstr ""
 
@@ -9064,7 +9064,7 @@ msgstr "pretix-kontoinvitation"
 
 #: pretix/control/views/organizer.py:477
 msgid ""
-"You cannot remove the last member from this team as noone would be left with "
+"You cannot remove the last member from this team as no one would be left with "
 "the permission to change teams."
 msgstr ""
 
@@ -10088,7 +10088,7 @@ msgstr ""
 #: pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration_code.html:56
 msgid ""
 "If this link does not open the pretixdesk application or if you want to set "
-"the application up on a seperate device, copy the following code and paste "
+"the application up on a separate device, copy the following code and paste "
 "it into the application:"
 msgstr ""
 
@@ -10693,7 +10693,7 @@ msgstr "Ukendt årsag"
 #: pretix/plugins/stripe/views.py:83
 #, fuzzy
 #| msgid "An internal error occurred, please try again."
-msgid "An error occured during connecting with Stripe, please try again."
+msgid "An error occurred during connecting with Stripe, please try again."
 msgstr "Siden stødte på en uventet intern fejl. Prøv venligst igen."
 
 #: pretix/plugins/stripe/views.py:86
@@ -11024,8 +11024,8 @@ msgstr "Tilføjelser"
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:150
 msgid ""
-"Addon 1\n"
-"Addon 2"
+"Add-On 1\n"
+"Add-On 2"
 msgstr ""
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:158
