--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -739,7 +739,7 @@ msgid "Timezone"
 msgstr "Zeitzone"
 
 #: pretix/base/models/auth.py:91
-msgid "Two-factor authentification is required to log in"
+msgid "Two-factor authentication is required to log in"
 msgstr "Zwei-Faktor-Authentifizierung ist zum Log-In nötig"
 
 #: pretix/base/models/auth.py:95
@@ -2899,7 +2899,7 @@ msgstr ""
 
 #: pretix/base/services/orders.py:708
 msgid ""
-"This is an addon product, please select the base position it should be added "
+"This is an add-on product, please select the base position it should be added "
 "to."
 msgstr ""
 "Dieses Produkt ist nur als Zusatzprodukt verfügbar, bitte wähle die "
@@ -3942,8 +3942,8 @@ msgstr "Zahlungsziel nur an Werktagen"
 
 #: pretix/control/forms/event.py:433
 msgid ""
-"If this is activated and the payment term of any order ends on a saturday or "
-"sunday, it will be moved to the next monday instead. This is required in "
+"If this is activated and the payment term of any order ends on a Saturday or "
+"Sunday, it will be moved to the next Monday instead. This is required in "
 "some countries by civil law. This will not effect the last date of payments "
 "configured above."
 msgstr ""
@@ -4933,7 +4933,7 @@ msgstr ""
 #, python-format
 msgid ""
 "The variation \"%s\" cannot be deleted because it has already been ordered "
-"by a user or currently is in a users's cart. Please set the variation as "
+"by a user or currently is in a user's cart. Please set the variation as "
 "\"inactive\" instead."
 msgstr ""
 "Die Variante \"%s\" kann nicht gelöscht werden, da sie bereits bestellt "
@@ -5792,7 +5792,7 @@ msgstr "Willkommen zurück!"
 
 #: pretix/control/templates/pretixcontrol/auth/login_2fa.html:11
 msgid ""
-"You configured your account to require authentification with a second "
+"You configured your account to require authentication with a second "
 "medium, e.g. your phone. Please enter your verification code here:"
 msgstr ""
 "Du hast dein Konto so eingerichtet, dass es zur Authentifizierung ein "
@@ -7652,7 +7652,7 @@ msgid ""
 "define, how many instances of your product pretix will sell. This way, you "
 "can configure whether your event can take an unlimited number of attendees "
 "or the number of attendees is limited. You can assign a product to multiple "
-"quotas to fulfil more complex requirements, e.g. if you want to limit the "
+"quotas to fulfill more complex requirements, e.g. if you want to limit the "
 "total number of tickets sold and the number of a specific ticket type at the "
 "same time."
 msgstr ""
@@ -7708,7 +7708,7 @@ msgstr ""
 "eu bei der Übersetzung helfen."
 
 #: pretix/control/templates/pretixcontrol/multi_languages_widget.html:14
-msgid "Inofficial translation"
+msgid "Unofficial translation"
 msgstr "inoffizielle Übersetzung"
 
 #: pretix/control/templates/pretixcontrol/order/cancel.html:4
@@ -8297,7 +8297,7 @@ msgstr "Team löschen:"
 
 #: pretix/control/templates/pretixcontrol/organizers/team_delete.html:7
 msgid ""
-"You cannot delete the team because there would be noone left who could "
+"You cannot delete the team because there would be no one left who could "
 "change team permissions afterwards."
 msgstr ""
 "Du kannst das Team nicht löschen, da es sonst niemanden mehr gäbe, der Teams "
@@ -9544,7 +9544,7 @@ msgstr "Das ausgewählte Produkt existiert nicht."
 
 #: pretix/control/views/item.py:976
 msgid ""
-"You cannot add addons to a product that is only available as an add-on "
+"You cannot add add-ons to a product that is only available as an add-on "
 "itself."
 msgstr ""
 "Du kannst keine Zusatzprodukte zu einem Produkt hinzufügen, das selbst nur "
@@ -9760,7 +9760,7 @@ msgstr "pretix Team-Einladung"
 
 #: pretix/control/views/organizer.py:477
 msgid ""
-"You cannot remove the last member from this team as noone would be left with "
+"You cannot remove the last member from this team as no one would be left with "
 "the permission to change teams."
 msgstr ""
 "Du kannst das letzte Teammitglied nicht entfernen, da es sonst niemanden "
@@ -10904,7 +10904,7 @@ msgstr "Mit pretixdesk verbinden"
 #: pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration_code.html:56
 msgid ""
 "If this link does not open the pretixdesk application or if you want to set "
-"the application up on a seperate device, copy the following code and paste "
+"the application up on a separate device, copy the following code and paste "
 "it into the application:"
 msgstr ""
 "Wenn dieser Button die pretixdesk-Anwendung nicht öffnet oder du pretixdesk "
@@ -11554,7 +11554,7 @@ msgstr "Unbekannter Grund"
 
 #: pretix/plugins/stripe/views.py:51 pretix/plugins/stripe/views.py:57
 #: pretix/plugins/stripe/views.py:83
-msgid "An error occured during connecting with Stripe, please try again."
+msgid "An error occurred during connecting with Stripe, please try again."
 msgstr ""
 "Während der Verbindung mit Stripe ist ein Fehler aufgetreten, bitte versuche "
 "es erneut."
