spell Add-on consistently
fixes #727

--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -989,7 +989,7 @@ msgstr "Produktkategorier"
 
 #: pretix/base/models/items.py:67
 #, python-brace-format
-msgid "{category} (Add-On products)"
+msgid "{category} (Add-on products)"
 msgstr "{category} (Tillægsprodukter)"
 
 #: pretix/base/models/items.py:201 pretix/base/models/items.py:550
@@ -1226,7 +1226,7 @@ msgid "Maximum number"
 msgstr "Maksimalt antal"
 
 #: pretix/base/models/items.py:562
-msgid "Add-Ons are included in the price"
+msgid "Add-ons are included in the price"
 msgstr "Tilføjelser en inkluderet i prisen"
 
 #: pretix/base/models/items.py:563
@@ -6740,7 +6740,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/item/addons.html:33
 #: pretix/control/templates/pretixcontrol/item/addons.html:66
-msgid "Add-On"
+msgid "Add-on"
 msgstr "Udvidelse"
 
 #: pretix/control/templates/pretixcontrol/item/addons.html:89
@@ -6752,7 +6752,7 @@ msgid "Modify product:"
 msgstr "Rediger produkt:"
 
 #: pretix/control/templates/pretixcontrol/item/base.html:22
-msgid "Add-Ons"
+msgid "Add-ons"
 msgstr "Tilføjelser"
 
 #: pretix/control/templates/pretixcontrol/item/base.html:27
@@ -7217,7 +7217,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/order/change.html:66
 #, python-format
-msgid "Add-On to position #%(posid)s"
+msgid "Add-on to position #%(posid)s"
 msgstr "Tilføjelse til position #%(posid)s"
 
 #: pretix/control/templates/pretixcontrol/order/change.html:85
@@ -11019,13 +11019,13 @@ msgid "Invoice address: company"
 msgstr "Faktureringsadresse: virksomhed"
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:149
-msgid "List of Add-Ons"
+msgid "List of Add-ons"
 msgstr "Tilføjelser"
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:150
 msgid ""
-"Add-On 1\n"
-"Add-On 2"
+"Add-on 1\n"
+"Add-on 2"
 msgstr ""
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:158
