--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -1026,7 +1026,7 @@ msgstr "Produktkategorien"
 
 #: pretix/base/models/items.py:67
 #, python-brace-format
-msgid "{category} (Add-On products)"
+msgid "{category} (Add-on products)"
 msgstr "{category} (Zusatzprodukte)"
 
 #: pretix/base/models/items.py:201 pretix/base/models/items.py:550
@@ -1295,7 +1295,7 @@ msgid "Maximum number"
 msgstr "Maximale Anzahl"
 
 #: pretix/base/models/items.py:562
-msgid "Add-Ons are included in the price"
+msgid "Add-ons are included in the price"
 msgstr "Zusatzprodukte sind im Preis enthalten"
 
 #: pretix/base/models/items.py:563
@@ -7297,7 +7297,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/item/addons.html:33
 #: pretix/control/templates/pretixcontrol/item/addons.html:66
-msgid "Add-On"
+msgid "Add-on"
 msgstr "Zusatz-Produkt"
 
 #: pretix/control/templates/pretixcontrol/item/addons.html:89
@@ -7309,7 +7309,7 @@ msgid "Modify product:"
 msgstr "Produkt bearbeiten:"
 
 #: pretix/control/templates/pretixcontrol/item/base.html:22
-msgid "Add-Ons"
+msgid "Add-ons"
 msgstr "Zusatz-Produkte"
 
 #: pretix/control/templates/pretixcontrol/item/base.html:27
@@ -7828,7 +7828,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/order/change.html:66
 #, python-format
-msgid "Add-On to position #%(posid)s"
+msgid "Add-on to position #%(posid)s"
 msgstr "Zusatz zu Position #%(posid)s"
 
 #: pretix/control/templates/pretixcontrol/order/change.html:85
@@ -11935,13 +11935,13 @@ msgid "Invoice address: company"
 msgstr "Rechnungsadresse: Firma"
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:149
-msgid "List of Add-Ons"
+msgid "List of Add-ons"
 msgstr "Liste der Zusatz-Produkte"
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:150
 msgid ""
-"Add-On 1\n"
-"Add-On 2"
+"Add-on 1\n"
+"Add-on 2"
 msgstr ""
 "Workshop 1\n"
 "Workshop 2"
