--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -1028,7 +1028,7 @@ msgstr "Produktkategorien"
 
 #: pretix/base/models/items.py:67
 #, python-brace-format
-msgid "{category} (Add-On products)"
+msgid "{category} (Add-on products)"
 msgstr "{category} (Zusatzprodukte)"
 
 #: pretix/base/models/items.py:201 pretix/base/models/items.py:550
@@ -1297,7 +1297,7 @@ msgid "Maximum number"
 msgstr "Maximale Anzahl"
 
 #: pretix/base/models/items.py:562
-msgid "Add-Ons are included in the price"
+msgid "Add-ons are included in the price"
 msgstr "Zusatzprodukte sind im Preis enthalten"
 
 #: pretix/base/models/items.py:563
@@ -7282,7 +7282,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/item/addons.html:33
 #: pretix/control/templates/pretixcontrol/item/addons.html:66
-msgid "Add-On"
+msgid "Add-on"
 msgstr "Zusatz-Produkt"
 
 #: pretix/control/templates/pretixcontrol/item/addons.html:89
@@ -7294,7 +7294,7 @@ msgid "Modify product:"
 msgstr "Produkt bearbeiten:"
 
 #: pretix/control/templates/pretixcontrol/item/base.html:22
-msgid "Add-Ons"
+msgid "Add-ons"
 msgstr "Zusatz-Produkte"
 
 #: pretix/control/templates/pretixcontrol/item/base.html:27
@@ -7813,7 +7813,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/order/change.html:66
 #, python-format
-msgid "Add-On to position #%(posid)s"
+msgid "Add-on to position #%(posid)s"
 msgstr "Zusatz zu Position #%(posid)s"
 
 #: pretix/control/templates/pretixcontrol/order/change.html:85
@@ -11907,13 +11907,13 @@ msgid "Invoice address: company"
 msgstr "Rechnungsadresse: Firma"
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:149
-msgid "List of Add-Ons"
+msgid "List of Add-ons"
 msgstr "Liste der Zusatzprodukte"
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:150
 msgid ""
-"Addon 1\n"
-"Addon 2"
+"Add-on 1\n"
+"Add-on 2"
 msgstr ""
 "Zusatzprodukt 1\n"
 "Zusatzprodukt 2"
