--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,10 +4,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-02 14:01+0000\n"
-"PO-Revision-Date: 2018-05-02 11:28+0000\n"
+"PO-Revision-Date: 2018-05-08 22:00+0000\n"
 "Last-Translator: Pernille Thorsen <perth@aarhus.dk>\n"
-"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix/da/"
-">\n"
+"Language-Team: Danish "
+"<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3198,7 +3198,7 @@ msgstr ""
 "Hej\n"
 "\n"
 "Vi har modtaget din bestilling til {event}. Din bestilling indeholder kun "
-"gratis produker og kræver derfor ingen betaling.\n"
+"gratis produkter og kræver derfor ingen betaling.\n"
 "\n"
 "Du kan ændre informationer og se status på din bestilling på {url}\n"
 "\n"
