--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-02 14:01+0000\n"
-"PO-Revision-Date: 2018-05-02 15:38+0000\n"
+"PO-Revision-Date: 2018-05-09 07:59+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
@@ -13066,7 +13066,7 @@ msgstr[1] ""
 #, python-format
 msgid "You can choose at most one option from this category."
 msgid_plural "You can choose up to %(max_count)s options from this category."
-msgstr[0] "Sie können höchstens eine Optionen aus dieser Kategorie auswählen."
+msgstr[0] "Sie können höchstens eine Option aus dieser Kategorie auswählen."
 msgstr[1] ""
 "Sie können höchstens %(max_count)s Optionen aus dieser Kategorie auswählen."
 
