--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-02 14:01+0000\n"
-"PO-Revision-Date: 2018-05-08 22:00+0000\n"
-"Last-Translator: Pernille Thorsen <perth@aarhus.dk>\n"
+"PO-Revision-Date: 2018-05-09 14:07+0000\n"
+"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
 "Language-Team: Danish "
 "<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
@@ -8191,7 +8191,7 @@ msgstr ""
 
 #: pretix/control/templates/pretixcontrol/order/refund.html:34
 msgid "Yes, refund order"
-msgstr "Ja, giv mig pengene tilbage"
+msgstr "Ja, tilbagebetal bestilling"
 
 #: pretix/control/templates/pretixcontrol/order/sendmail.html:4
 #: pretix/control/templates/pretixcontrol/order/sendmail.html:7
