Translated on translate.pretix.eu (French)
Currently translated at 96.6% (58 of 60 strings)

Translation: pretix/pretix (frontend)
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix-js/fr/

powered by weblate

--- a/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
@@ -7,10 +7,10 @@ msgstr ""
 "Project-Id-Version: French\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 10:07+0000\n"
-"PO-Revision-Date: 2018-03-22 17:35+0000\n"
-"Last-Translator: Claude <superoxyde@laposte.net>\n"
-"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix-js/"
-"fr/>\n"
+"PO-Revision-Date: 2018-05-17 17:18+0000\n"
+"Last-Translator: Eric Daras <eric@daras.family>\n"
+"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix-"
+"js/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -131,7 +131,7 @@ msgstr "QR Code"
 #: pretix/static/pretixcontrol/js/ui/editor.js:210
 msgid "The PDF background file could not be loaded for the following reason:"
 msgstr ""
-"Le fichier d'arrière-plan PDF n' a pas pu être chargé pour la raison "
+"Le fichier PDF généré en arrière-plan n'a pas pu être chargé pour la raison "
 "suivante:"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:359
