--- a/src/pretix/locale/fr/LC_MESSAGES/django.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/django.po
@@ -4,10 +4,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 10:07+0000\n"
-"PO-Revision-Date: 2018-04-26 12:18+0000\n"
-"Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
-"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix/fr/"
-">\n"
+"PO-Revision-Date: 2018-05-17 17:18+0000\n"
+"Last-Translator: Eric Daras <eric@daras.family>\n"
+"Language-Team: French "
+"<https://translate.pretix.eu/projects/pretix/pretix/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -767,7 +767,7 @@ msgstr "Langue"
 
 #: pretix/base/models/auth.py:93
 msgid "Timezone"
-msgstr "Timezone"
+msgstr "Fuseau horaire"
 
 #: pretix/base/models/auth.py:96
 msgid "Two-factor authentification is required to log in"
@@ -1105,7 +1105,7 @@ msgstr "Catégories de produits"
 #: pretix/base/models/items.py:67
 #, python-brace-format
 msgid "{category} (Add-On products)"
-msgstr "{category} (Add-On products)"
+msgstr "{category} (Add-On)"
 
 #: pretix/base/models/items.py:201 pretix/base/models/items.py:550
 #: pretix/control/templates/pretixcontrol/items/index.html:38
