Translated on translate.pretix.eu (French)
Currently translated at 98.3% (59 of 60 strings)

Translation: pretix/pretix (frontend)
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix-js/fr/

powered by weblate

--- a/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: French\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 10:07+0000\n"
-"PO-Revision-Date: 2018-05-17 17:18+0000\n"
+"PO-Revision-Date: 2018-05-18 09:31+0000\n"
 "Last-Translator: Eric Daras <eric@daras.family>\n"
 "Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix-"
 "js/fr/>\n"
@@ -300,18 +300,13 @@ msgstr ""
 "sur ce message pour continuer votre commande avec votre panier."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
-#, fuzzy
-#| msgctxt "widget"
-#| msgid ""
-#| "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
-#| "\"noopener\">pretix</a>"
 msgctxt "widget"
 msgid ""
 "<a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">event "
 "ticketing powered by pretix</a>"
 msgstr ""
-"généré par <a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener"
-"\">pretix</a>"
+"<a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">Billetterie "
+"en ligne propulsée par Pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:28
 msgctxt "widget"
