--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,10 +4,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 10:07+0000\n"
-"PO-Revision-Date: 2018-05-09 14:07+0000\n"
-"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
-"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix/da/"
-">\n"
+"PO-Revision-Date: 2018-05-18 10:18+0000\n"
+"Last-Translator: Pernille Thorsen <perth@aarhus.dk>\n"
+"Language-Team: Danish "
+"<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -12272,8 +12272,10 @@ msgstr[1] ""
 #, python-format
 msgid "You can choose at most one option from this category."
 msgid_plural "You can choose up to %(max_count)s options from this category."
-msgstr[0] ""
+msgstr[0] "Du kan vælge en af følgende muligheder for dette arrangement."
 msgstr[1] ""
+"Du kan vælge op til %(max_count)s af følgende muligheder for dette "
+"arrangement."
 
 #: pretix/presale/templates/pretixpresale/event/checkout_addons.html:40
 #, python-format
