--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgstr ""
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German (informal) "
 "<https://translate.pretix.eu/projects/pretix/pretix/de_Informal/>\n"
-"Language: de_Informal\n"
+"Language: de_DE@Informal\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
